objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>X2a_Custom_Solution_Complete__c</fullName>
        <inlineHelpText>Used by Component Distribution to task custom design tasks that is completed by Custom Solution team.</inlineHelpText>
        <label>2a. Custom Solution Complete?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>i__DaysSinceLastMail__c</fullName>
        <description>Number of days since the last email (inbound or outbound)</description>
        <formula>NOW() - i__LastMailSent__c</formula>
        <label>Days Since Last Email</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i__LastInboundMail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The most recent email sent by this Opportunity</description>
        <label>Last Inbound Email</label>
        <referenceTo>i__Email__c</referenceTo>
        <relationshipLabel>Opportunitys (Last Inbound Email)</relationshipLabel>
        <relationshipName>LastInboundEmailForOpportunitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>i__LastInboundSent__c</fullName>
        <description>Time of the most recent email sent by this Opportunity</description>
        <label>Last Inbound Email Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i__LastInboundTime__c</fullName>
        <description>obsolete - use LastInboundSent__c</description>
        <formula>i__LastInboundSent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>obsolete field</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i__LastMailSent__c</fullName>
        <description>Time of the most recent email sent or received by this Opportunity</description>
        <label>Last Email Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i__LastMailTimeDelta__c</fullName>
        <description>Difference, in days, between the time the last outbound email was sent and the time the last inbound email was received</description>
        <formula>i__LastOutboundSent__c - i__LastInboundSent__c</formula>
        <label>Last Mail Time Delta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i__LastMailTime__c</fullName>
        <description>obsolete - use LastMailSent__c</description>
        <formula>i__LastMailSent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>obsolete field</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i__LastMail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The most recent email to or from this Opportunity</description>
        <label>Last Email</label>
        <referenceTo>i__Email__c</referenceTo>
        <relationshipLabel>Opportunitys (Last Email)</relationshipLabel>
        <relationshipName>LastEmailForOpportunitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>i__LastOutboundMail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The most recent email sent to this Opportunity</description>
        <label>Last Outbound Email</label>
        <referenceTo>i__Email__c</referenceTo>
        <relationshipLabel>Opportunitys (Last Outbound Email)</relationshipLabel>
        <relationshipName>LastOutboundEmailForOpportunitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>i__LastOutboundSent__c</fullName>
        <description>Time of the most recent email sent to this Opportunity</description>
        <label>Last Outbound Email Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i__LastOutboundTime__c</fullName>
        <description>obsolete - use LastOutboundSent__c</description>
        <formula>i__LastOutboundSent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>obsolete field</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>All_Distribution_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SBU__c</field>
            <operation>equals</operation>
            <value>CD</value>
        </filters>
        <label>All Distribution Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <group>ESSENTRA_COMPONENT_DISTRIBUTION</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>EMEA_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owners_Region__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <label>EMEA Opportunities</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>MyOutofDateOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>My Out of Date Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <group>ESSENTRA_COMPONENT_DISTRIBUTION</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Innovation_Opportunities</fullName>
        <active>true</active>
        <businessProcess>Filtrona</businessProcess>
        <description>None existing product / innovation opportunities</description>
        <label>Innovation Opportunities</label>
    </recordTypes>
    <recordTypes>
        <fullName>Innovation_Opportunities_CD</fullName>
        <active>true</active>
        <businessProcess>Component Distribution</businessProcess>
        <description>Used by Component Distribution for Opportunities with Custom Solution Products</description>
        <label>Innovation Opportunities CD</label>
    </recordTypes>
    <recordTypes>
        <fullName>Portfolio_products_requiring_modifications</fullName>
        <active>true</active>
        <businessProcess>Filtrona</businessProcess>
        <description>Opportunities for portfolio products which require modifications or design</description>
        <label>Portfolio product opportunities requiring modifications</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Opportunities</fullName>
        <active>true</active>
        <businessProcess>Filtrona</businessProcess>
        <description>Opportunites relating to Standard products</description>
        <label>Standard Opportunities</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Opportunities_CD</fullName>
        <active>true</active>
        <businessProcess>Component Distribution</businessProcess>
        <description>Used by Component Distribution for Opportunities with Standard Products</description>
        <label>Standard Opportunities CD</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unknown_Opportunity_Type</fullName>
        <active>true</active>
        <businessProcess>Filtrona</businessProcess>
        <description>Default opportunity type for lead conversion - can not progress through opportunity stages</description>
        <label>Unknown Opportunity Type</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Account_versus_Opportunity_currency</fullName>
        <active>false</active>
        <description>Account and opportunity currency need to be the same</description>
        <errorConditionFormula>TEXT(CurrencyIsoCode) &lt;&gt;  TEXT(Account.CurrencyIsoCode)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>The currency on the account needs to be identical to the one on the opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Agree_Requirement_Definition_Task</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Probability &gt;=0.2,
ISBLANK(TEXT(Agree_Requirement_Definition_Task__c)),
AND(RecordType.DeveloperName&lt;&gt;&apos;Innovation_Opportunities_CD&apos;, RecordType.DeveloperName&lt;&gt;&apos;Standard_Opportunities_CD&apos;))</errorConditionFormula>
        <errorDisplayField>Agree_Requirement_Definition_Task__c</errorDisplayField>
        <errorMessage>Please mark this task as complete.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Avoid_unknown_opportunity_record_type</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Probability &gt; 0.1,RecordTypeId = &apos;01220000000Uark&apos;)</errorConditionFormula>
        <errorMessage>Please change the opportunity record type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Business_Area</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(Business_Area__r.Name=&quot;&quot;,ISNULL(Business_Area__r.Name)) , Probability &gt;= 0.2  )</errorConditionFormula>
        <errorDisplayField>Business_Area__c</errorDisplayField>
        <errorMessage>Confirm the business area before moving to this probability level</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Account_Verified</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Account_Needs_Verification__c = &apos;YES&apos;, Account_Verified__c = FALSE,  Probability &gt;= 0.2, AND(RecordType.DeveloperName&lt;&gt;&apos;Innovation_Opportunities_CD&apos;, RecordType.DeveloperName&lt;&gt;&apos;Standard_Opportunities_CD&apos;))</errorConditionFormula>
        <errorDisplayField>Account_Verified__c</errorDisplayField>
        <errorMessage>The Account must  be verified at this probability level</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Commercial_Proposal</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Allow_Fastrack_Quote__c =false,(Probability &gt;= 0.9), AND(RecordType.DeveloperName&lt;&gt;&apos;Innovation_Opportunities_CD&apos;, RecordType.DeveloperName&lt;&gt;&apos;Standard_Opportunities_CD&apos;),
OR( ISBLANK(  Approval_Commercial_Proposal__c ),Approval_Commercial_Proposal__c   &gt; TODAY()))</errorConditionFormula>
        <errorMessage>This probability level requires an approved Commercial Proposal Opportunity Task</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Compliance</fullName>
        <active>false</active>
        <errorConditionFormula>AND( Allow_Fastrack_Quote__c =false,Probability &gt;= 0.9,OR( ISBLANK( Approval_Compliance_certification__c ), Approval_Compliance_certification__c  &gt; TODAY()))</errorConditionFormula>
        <errorMessage>This probability level requires an approved Compliance Task</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Full_Production_Planning_Schedule</fullName>
        <active>false</active>
        <errorConditionFormula>AND( Probability &gt;= 0.9,OR( ISBLANK( Approval_Full_Production_Plan__c ) , Approval_Full_Production_Plan__c  &gt; TODAY()))</errorConditionFormula>
        <errorMessage>This probability level requires an approved Customer Trial and Internal Production Planning Opportunity Task</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Know_Your_Customer_Phase_2</fullName>
        <active>false</active>
        <errorConditionFormula>AND( OR(AND(Business_Area__r.MDM_External_Id__c=&apos;FIL&apos;, Probability &gt;= 0.1),AND(Business_Area__r.MDM_External_Id__c=&apos;CSP&apos;, Probability &gt;= 0.9)) ,  Account_Needs_Verification__c = &apos;YES&apos;,
OR(  ISBLANK( Approval_Know_your_customer__c ) ,Approval_Know_your_customer__c &gt; TODAY()))</errorConditionFormula>
        <errorMessage>This probability level requires an approved Know Your Customer Opportunity Task</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Requirement_Definition</fullName>
        <active>false</active>
        <errorConditionFormula>AND(  Allow_Fastrack_Quote__c =false,Probability &gt;= 0.2,OR( ISBLANK( Approval_Requirement_definition__c ),  Approval_Requirement_definition__c  &gt; TODAY()))</errorConditionFormula>
        <errorMessage>This probability level requires an approved Agree Requirement Definition Opportunity Task</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Supply_Chain_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND( Probability &gt;= 0.9,OR( ISBLANK(Approval_Supply_chain_validation__c) ,Approval_Supply_chain_validation__c &gt; TODAY()))</errorConditionFormula>
        <errorMessage>This probability level requires an approved Supply Chain Validation Opportunity Task</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Trial_Product_Client_Approval</fullName>
        <active>false</active>
        <errorConditionFormula>AND(  Task_Count_Trial_Run__c &gt; 0, Probability &gt;= 0.9,
OR(  ISBLANK(  Approval_Trial_Product_Production__c ) ,Approval_Trial_Product_Production__c &gt; TODAY()))</errorConditionFormula>
        <errorMessage>This probability level requires the customer to approve the Trial Product Production run Opportunity Task</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Value_Proposition</fullName>
        <active>false</active>
        <errorConditionFormula>AND( Allow_Fastrack_Quote__c =false,(Probability &gt;= 0.5),
OR( ISBLANK( Approval_Value_proposition__c ),Approval_Value_proposition__c  &gt; TODAY()))</errorConditionFormula>
        <errorMessage>This probability level requires an approved Create Value Proposition Opportunity Task</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_considered_counterfeit</fullName>
        <active>false</active>
        <description>counterfeit</description>
        <errorConditionFormula>AND( Requires_Know_Your_Customer__c = true, Confirmed_Con_counterfeiter__c = false)</errorConditionFormula>
        <errorDisplayField>Confirmed_Con_counterfeiter__c</errorDisplayField>
        <errorMessage>Please confirm you have considered counterfeit activities</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_cost_estimate</fullName>
        <active>false</active>
        <errorConditionFormula>AND(Probability &gt;= 0.7,
OR(ISBLANK(  Approval_Solution_cost_estimate__c  ),  Approval_Solution_cost_estimate__c  &gt; TODAY())
)</errorConditionFormula>
        <errorMessage>This probability level requires an approved Solution Cost Estimate Opportunity Task</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_legal_approval</fullName>
        <active>false</active>
        <errorConditionFormula>AND( Allow_Fastrack_Quote__c =false,(Probability &gt;= 0.2),
OR( ISBLANK(Approval_Legal_and_NDA__c),Approval_Legal_and_NDA__c &gt; TODAY()))</errorConditionFormula>
        <errorMessage>This probability level requires an approved Legal / NDA Approval Opportunity Task</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_month_split_adds_up</fullName>
        <active>false</active>
        <errorConditionFormula>AND(Probability&gt;=0.8,
Amount_this_year__c &lt;&gt;
 (Revenue_month_1__c +
Revenue_month_2__c +
Revenue_month_3__c +
Revenue_month_4__c +
Revenue_month_5__c +
Revenue_month_6__c +
Revenue_month_7__c +
Revenue_month_8__c +
Revenue_month_9__c +
Revenue_month_10__c +
Revenue_month_11__c +
Revenue_month_12__c
))</errorConditionFormula>
        <errorDisplayField>Amount_this_year__c</errorDisplayField>
        <errorMessage>The monthly revenue forecast doesn&apos;t match the total of this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_revenue_forecast_and_margin</fullName>
        <active>false</active>
        <errorConditionFormula>AND( Probability &gt;= 0.8,OR( Total_Revenue__c =0, Total_Opportuntity_Margin__c =0))</errorConditionFormula>
        <errorMessage>This probability level requires the Total Revenue and Total Opportunity Margin in the Detailed Revenue Forecast section to be &gt; 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_solution_specification</fullName>
        <active>false</active>
        <errorConditionFormula>AND( Allow_Fastrack_Quote__c =false,(Probability &gt;= 0.7),
OR( ISBLANK( Approval_Solution_specification__c ), Approval_Solution_specification__c  &gt; TODAY()))</errorConditionFormula>
        <errorMessage>This probability level requires an approved Agree Final Product Solution Specification Opportunity Task</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Count_products</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Probability &gt;= 0.7, Opportunity_Product_Count__c = 0)</errorConditionFormula>
        <errorMessage>Please add product types before changing to this probability level</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Count_solution_specification</fullName>
        <active>false</active>
        <errorConditionFormula>AND( Probability &gt;= 0.5,Task_Count_solution_specification__c  = 0)</errorConditionFormula>
        <errorMessage>This probability level requires a Solution Specification task to be created</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Create_Value_Proposition_Task</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Probability &gt;=0.5,
ISBLANK(TEXT(Create_Value_Proposition_Task__c)),
AND(RecordType.DeveloperName&lt;&gt;&apos;Innovation_Opportunities_CD&apos;, RecordType.DeveloperName&lt;&gt;&apos;Standard_Opportunities_CD&apos;)
)</errorConditionFormula>
        <errorDisplayField>Create_Value_Proposition_Task__c</errorDisplayField>
        <errorMessage>Please mark this task as complete.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Creation_of_Solution_Cost_Estimate</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
Probability &gt;=0.7, 
ISBLANK(TEXT(Creation_of_Solution_Cost_Estimate_Task__c)),
AND(RecordType.DeveloperName&lt;&gt;&apos;Innovation_Opportunities_CD&apos;, RecordType.DeveloperName&lt;&gt;&apos;Standard_Opportunities_CD&apos;) 
)</errorConditionFormula>
        <errorDisplayField>Creation_of_Solution_Cost_Estimate_Task__c</errorDisplayField>
        <errorMessage>Please mark this task as complete.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Description</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISBLANK( Description ), Probability &gt;= 0.2 )</errorConditionFormula>
        <errorDisplayField>Description</errorDisplayField>
        <errorMessage>Describe the requirement before moving to this probability level</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enforce_ERP_Customer_Account</fullName>
        <active>false</active>
        <errorConditionFormula>AND(Probability &gt;0.99, OR(ISNULL( Account.MDM_External_ID__c  ),ISBLANK( Account.MDM_External_ID__c ) ))</errorConditionFormula>
        <errorMessage>You need to specify the Fourth Shift Site and Customer ID on the Account and wait for Fourth Shift to associate the correct Fourth Shift record with this Salesforce account before you can move to this probability level.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_Gross_Margin_Percentage</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Probability &gt;= 0.2,OR( 
ISBLANK(   Gross_Margin_Percentage__c ), 
Gross_Margin_Percentage__c= 0
),AND(RecordType.DeveloperName&lt;&gt;&apos;Innovation_Opportunities_CD&apos;, RecordType.DeveloperName&lt;&gt;&apos;Standard_Opportunities_CD&apos;))</errorConditionFormula>
        <errorDisplayField>Gross_Margin_Percentage__c</errorDisplayField>
        <errorMessage>This probability level requires the gross margin percentage to be specified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_amount</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Probability &gt;= 0.2,OR( 
ISBLANK(  Amount  ), 
Amount  = 0
))</errorConditionFormula>
        <errorDisplayField>Amount</errorDisplayField>
        <errorMessage>This probability level requires the amount to be specified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Final_Product_Solution_Spec_Task</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
Probability &gt;=0.7, 
ISBLANK(TEXT(Final_Product_Solution_Spec_Task__c)),AND(RecordType.DeveloperName&lt;&gt;&apos;Innovation_Opportunities_CD&apos;, RecordType.DeveloperName&lt;&gt;&apos;Standard_Opportunities_CD&apos;) 
)</errorConditionFormula>
        <errorDisplayField>Final_Product_Solution_Spec_Task__c</errorDisplayField>
        <errorMessage>Please mark this task as complete.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Innovation_check_Innovation_Council</fullName>
        <active>false</active>
        <errorConditionFormula>AND( Allow_Fastrack_Quote__c =false,
Internal_Record_Type_Name__c = &quot;INNOVATION&quot;, 
Probability &gt;= 0.2,
OR(ISBLANK( Approval_Innovation_council__c ),  Approval_Innovation_council__c  &gt; TODAY())
)</errorConditionFormula>
        <errorMessage>This probability level for Innovation opportunities requires an approved Innovation or Design Required Opportunity Task</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Innovation_check_cost_estimate</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
Internal_Record_Type_Name__c = &quot;INNOVATION&quot;, 
Probability &gt;= 0.5,
OR(ISBLANK(  Approval_Solution_cost_estimate__c  ),  Approval_Solution_cost_estimate__c  &gt; TODAY())
)</errorConditionFormula>
        <errorMessage>This probability level requires an approved Solution Cost Estimate Opportunity Task</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Innovation_technical_solution_timeframes</fullName>
        <active>false</active>
        <errorConditionFormula>AND( Allow_Fastrack_Quote__c =false,
Internal_Record_Type_Name__c = &quot;INNOVATION&quot;, 
Probability &gt;= 0.5,
OR(ISBLANK(   Approval_Technical_Solution_Timeframes__c   ),   Approval_Technical_Solution_Timeframes__c   &gt; TODAY())
)</errorConditionFormula>
        <errorMessage>This probability level for Innovation opportunities requires an approved Agree Technical Solution Timeframes Opportunity Task</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Konw_Your_Customer</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
Probability &gt;=0.2, 
ISBLANK(TEXT(Know_your_customer__c)),
AND(RecordType.DeveloperName&lt;&gt;&apos;Innovation_Opportunities_CD&apos;, RecordType.DeveloperName&lt;&gt;&apos;Standard_Opportunities_CD&apos;) 
)</errorConditionFormula>
        <errorDisplayField>Know_your_customer__c</errorDisplayField>
        <errorMessage>Please mark this task as complete.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_CSR</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Allow_Fastrack_Quote__c =false,Probability &gt; 0.2, ISBLANK(  CSR__c  ), AND(RecordType.DeveloperName&lt;&gt;&apos;Innovation_Opportunities_CD&apos;, RecordType.DeveloperName&lt;&gt;&apos;Standard_Opportunities_CD&apos;) )</errorConditionFormula>
        <errorMessage>Please assign a CSR to this opportunity first</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Record_Type</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISBLANK( RecordType.Name ), Probability &gt;= 30)</errorConditionFormula>
        <errorMessage>Select the opportunity (record) type first</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Type</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(Type,&quot;&quot;), Probability &gt;= 0.2)</errorConditionFormula>
        <errorDisplayField>Type</errorDisplayField>
        <errorMessage>Select type before selecting this probability level</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Portfolio_check_Design_task</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
Internal_Record_Type_Name__c = &quot;PORTFOLIO&quot;, 
Probability &gt;= 0.7,
OR(ISBLANK(Approval_Graphical_design__c), Approval_Graphical_design__c &gt; TODAY())
)</errorConditionFormula>
        <errorMessage>This probability level for portfolio opportunities requires an approved Graphical Solution Design Opportunity Task</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_for_Won_or_Lost</fullName>
        <active>true</active>
        <description>As the opportunity stage is marked as either Lost or Won, Reason has to be entered mandatorily.</description>
        <errorConditionFormula>IF( 
AND( 
OR(ISPICKVAL(StageName, &quot;Won&quot;),ISPICKVAL(StageName, &quot;Lost&quot;)), 
ISBLANK(TEXT(Reason_for_Won_Lost_Opp__c))), True, False 
)</errorConditionFormula>
        <errorDisplayField>Reason_for_Won_Lost_Opp__c</errorDisplayField>
        <errorMessage>As the opportunity stage is marked as either Won or Lost, Reason has to be entered mandatorily.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Revenue_summary</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Probability &gt;= 0.5,
Amount_this_year__c =0,
Amount_year_two__c  =0,
Amount_year_three__c =0, (AND(RecordType.DeveloperName&lt;&gt;&apos;Innovation_Opportunities_CD&apos;, RecordType.DeveloperName&lt;&gt;&apos;Standard_Opportunities_CD&apos;))
)
 || 
AND(Probability &gt;= 0.7,
Amount_this_year__c =0,
Amount_year_two__c  =0,
Amount_year_three__c =0, (OR(RecordType.DeveloperName=&apos;Innovation_Opportunities_CD&apos;, RecordType.DeveloperName=&apos;Standard_Opportunities_CD&apos;)))</errorConditionFormula>
        <errorMessage>This probability level requires a revenue summary forecast (Year 1, Year 2, Year 3)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Standard_and_Portfolio_check_sample</fullName>
        <active>false</active>
        <errorConditionFormula>AND( Probability &gt;= 0.7,
OR(Internal_Record_Type_Name__c =&quot;STANDARD&quot;, 
Internal_Record_Type_Name__c =&quot;PORTFOLIO&quot;),
OR(ISBLANK( Approval_Sample_by_Customer__c ),
Approval_Sample_by_Customer__c  &gt; TODAY()))</errorConditionFormula>
        <errorMessage>This probability level for this opportunity type requires an approved Create Sample Opportunity Task. If no samples are required - enter that in the task description</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Opportunity_Amount_should_years</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Probability &gt;= 0.8,
 Amount  &lt;&gt; 
(Amount_this_year__c + Amount_year_two__c +  Amount_year_three__c),AND(RecordType.DeveloperName&lt;&gt;&apos;Innovation_Opportunities_CD&apos;, RecordType.DeveloperName&lt;&gt;&apos;Standard_Opportunities_CD&apos;))</errorConditionFormula>
        <errorMessage>Total opportunity amount should match sum for This Year and next two years - please update the Product Category break down!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Trial_and_Internal_Planning_Task</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
Probability =0.9, 
ISBLANK(TEXT(Trial_and_Internal_Planning_Task__c)),AND(RecordType.DeveloperName&lt;&gt;&apos;Innovation_Opportunities_CD&apos;, RecordType.DeveloperName&lt;&gt;&apos;Standard_Opportunities_CD&apos;) 
)</errorConditionFormula>
        <errorDisplayField>Trial_and_Internal_Planning_Task__c</errorDisplayField>
        <errorMessage>Please mark this task as complete.</errorMessage>
    </validationRules>
</CustomObject>